<resources>
    <string name="app_name">Ankiji</string>
    <string name="btn_login">Go</string>
    <string name="login_with">Sign in with</string>
    <string name="create_an_account"><u>Create an account?</u></string>
    <string name="forgot_passowrd"><u>Forgot password?</u></string>
    <string name="login">SIGN IN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="marugoto_title">まるごと A2.1</string>
    <string name="item_count">30 items</string>

    <string name="facebook_app_id">929227390576555</string>
    <string name="fb_login_protocol_scheme">fb929227390576555</string>

    <string name="login_success">Sign In Successfully</string>
    <string name="login_failed">Sign In Attempt failed</string>
    <string name="login_cancel">Sign In Cancelled</string>
    <string name="connection_failed">Connection Failed</string>

    <string name="invalid_username">Invalid Username.Username must has from 6 to 20 characters.</string>
    <string name="invalid_email">Invalid Email.</string>
    <string name="invalid_password">Invalid Password. Password must has greater than or equal 6 characters.</string>
    <string name="pass_not_matching">Confirm password does not match</string>

    <string name="sign_up_successful">Sign Up Successful</string>
    <string name="sign_up_failed">Sign Up Failed</string>

    <string name="ns_menu_open">1</string>
    <string name="ns_menu_close">0</string>
    <string name="test_moji">作文</string>
    <string name="answerA">A: きょうし</string>
    <string name="answerB">B: がくせい</string>
    <string name="answerC">C: だいがく</string>
    <string name="answerD">D: さくぶん</string>
    <string name="main">Main</string>
    <string name="retry">Retry</string>
    <string name="notification">Do you want to retry?</string>

    <string name="text_outside_button_buider_learn">Learn</string>
    <string name="text_outside_button_buider_chart">Chart</string>
    <string name="text_outside_button_buider_test">Test</string>
    <string name="text_outside_button_buider_edit">Edit</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>

    <string name="warning_unsave_data">Do you want to save your vocabulary set?</string>
    <string name="remove_warning">Do you want to remove this set?</string>
    <string name="ptit">Học Viện Công Nghệ Bưu Chính Viễn Thông</string>
    <string name="leader"><i>Leader</i></string>
    <string name="developer"><i>Developer</i></string>
    <string name="uit">Đại học Công nghệ Thông Tin</string>

    <string name="forgot_password_msg">Please fill in your email address to receive your password reset instruction.</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>

    <string name="pick_picture">Pick your picture</string>

    <!--Profile Screen-->
    <string name="profile_picture">Profile picture</string>
    <string name="change_pass">Change password</string>
    <string name="number_set">Number Of Sets: </string>
    <string name="total_words">Total of Words</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>

    <string name="connected">Your device is connected</string>
    <string name="not_connected">Your device is not connected</string>
    <string name="reset_chart">Reset</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
