<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.jishin.ankiji.profile.ProfileActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:elevation="10dp"
        android:theme="@style/ToolBarTheme.ToolBarStyle">
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutProfileImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/txtProfileImg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:text="@string/profile_picture"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/user_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imvRight1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imvRight1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#D0CFCD"
            app:layout_constraintTop_toBottomOf="@id/txtProfileImg" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/layoutProfileImg">


        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            tools:text="@string/username"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imvRight2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_right"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#D0CFCD"
            app:layout_constraintTop_toBottomOf="@id/txtUsername" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        app:layout_constraintTop_toBottomOf="@id/layoutUsername">


        <TextView
            android:id="@+id/txtEmail_profile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            tools:text="@string/email"
            android:background="@android:color/transparent"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#D0CFCD"
            app:layout_constraintTop_toBottomOf="@id/txtEmail_profile" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

        <TextView
            android:id="@+id/txtChangePassword_profile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/btn_reset_password"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imvRight4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_right"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line4"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="#D0CFCD"
            app:layout_constraintTop_toBottomOf="@id/txtChangePassword_profile" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:background="#D0CFCD"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/layoutChangePass"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutNumSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/space">

        <TextView
            android:id="@+id/txtNumberOfSet"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/number_set"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutNumSet" />

        <View
            android:id="@+id/line6"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#D0CFCD"
            app:layout_constraintTop_toBottomOf="@id/txtNumberOfSet" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutTotalWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutNumSet">


        <TextView
            android:id="@+id/txtTotalOfWord"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/total_words"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:background="#D0CFCD"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTotalWord"/>


</android.support.constraint.ConstraintLayout>
