<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jishin.ankiji.signin.SigninActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67"/>


    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        android:background="@drawable/gradient_background_shap">




        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="55dp"
            app:cardCornerRadius="10dp">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_login"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Color">


                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameWrapper"
                    app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Color">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_login"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordWrapper" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>






        <!--<android.support.constraint.ConstraintLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:layout_marginLeft="45dp"-->
            <!--android:layout_marginRight="45dp"-->
            <!--android:layout_marginBottom="60dp"-->
            <!--android:background="@drawable/white_retangle_shap">-->


            <!--<TextView-->
                <!--android:id="@+id/text_login"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintTop_toTopOf="parent"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintRight_toRightOf="parent"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:text="@string/login"-->
                <!--android:textSize="30sp"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="@color/colorPrimaryDark"/>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/usernameWrapper"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintTop_toBottomOf="@id/text_login"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintRight_toRightOf="parent"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Color">-->


                <!--<EditText-->
                    <!--android:id="@+id/edt_username"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="text"-->
                    <!--android:hint="@string/username"-->
                    <!--android:singleLine="true"/>-->

            <!--</android.support.design.widget.TextInputLayout>-->


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/passwordWrapper"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintRight_toRightOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/usernameWrapper"-->
                <!--app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Color">-->

                <!--<EditText-->
                    <!--android:id="@+id/edt_password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/password"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:singleLine="true"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<Button-->
                <!--android:id="@+id/btnLogin"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="35dp"-->
                <!--android:background="@color/colorPrimaryDark"-->
                <!--android:text="@string/btn_login"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="20sp"-->
                <!--android:textStyle="bold"-->
                <!--android:textAllCaps="false"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintRight_toRightOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@id/passwordWrapper" />-->

        <!--</android.support.constraint.ConstraintLayout>-->

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/arrow_more_item"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/more_item_shap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_arrow_bottom"
            android:tint="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/login_with"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_more_item" />



    <android.support.constraint.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


    <ImageView
        android:id="@+id/img_facebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/facebook"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/login_with"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>


    <ImageView
        android:id="@+id/img_google"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/googleplus"
        app:layout_constraintTop_toBottomOf="@id/login_with"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>



    <TextView
        android:id="@+id/tv_create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_facebook"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"/>



    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_passowrd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_google"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"/>

</android.support.constraint.ConstraintLayout>
